--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,3 +156,11 @@
     /* Apply the reveal animation */
     animation: reveal 0.4s ease-in-out forwards;
 }
+
+/* Shiki code styling */
+code,
+kbd,
+samp,
+pre {
+    padding: 4px;
+}
